--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .history
 .svn/
 migrate_working_dir/
+.metadata
 
 # IntelliJ related
 *.iml
@@ -37,7 +38,9 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+/android/
+/ios/
+/linux/
+/macos/
+/web/
+/windows/
