--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons:
-  sqflite:
-  sqflite_common_ffi:
-  foundation:
-  sqflite_common_ffi_web:
+  sqflite: 2.3.3
+  sqflite_common_ffi: 2.3.3
+  foundation: 0.0.5
+  sqflite_common_ffi_web: 0.4.3+1
 
 dev_dependencies:
   flutter_test:
