--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   sqflite_common_ffi: 2.3.3
   foundation: 0.0.5
   sqflite_common_ffi_web: 0.4.3+1
+  xml: ^6.5.0
+  styled_text: ^8.1.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
