--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   styled_text: ^8.1.0
   shared_preferences: ^2.2.3
   settings_ui: ^2.0.2
+  flutter_colorpicker: ^1.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
